syntax = "proto3";
package car;
option go_package = "./pkg/car/pb";

message Car {
  string id = 1;
  string brand = 2;
  string model = 3;
  int32 year = 4;
  float displacement = 6;
  string body = 7;
  float mpg = 8;
  int32 cylinders = 9;
  float horsepower = 10;
  string brake_system = 11;
  string aspiration = 12;
  float acceleration = 13;
  string country = 14;
}

service CarService {
  rpc CreateCar (CreateCarRequest) returns (CreateCarResponse);
  rpc ReadCar (ReadCarRequest) returns (ReadCarResponse); // return NOT_FOUND if not found
  rpc UpdateCar (UpdateCarRequest) returns (UpdateCarResponse); // return NOT_FOUND if not found
  rpc DeleteCar (DeleteCarRequest) returns (DeleteCarResponse); // return NOT_FOUND if not found
  rpc ListCar (ListCarRequest) returns (stream ListCarResponse);
}

message CreateCarRequest {
  Car car = 1;
}

message CreateCarResponse {
  Car car = 1;
}

message ReadCarRequest {
  string car_id = 1;
}

message ReadCarResponse {
  Car car = 1;
}

message UpdateCarRequest {
  Car car = 1;
}

message UpdateCarResponse {
  Car car = 1;
}

message DeleteCarRequest {
  string car_id = 1;
}

message DeleteCarResponse {
  string car_id = 1;
}

message ListCarRequest {}

message ListCarResponse {
  Car car = 1;
}